Fixed bug with overflow in representations boxes

--- a/productive-failure-platform/src/App.css
+++ b/productive-failure-platform/src/App.css
@@ -106,6 +106,10 @@ svg {
     max-height: 400px;
 }
 
+.shape-container {
+    min-width: 60px;
+}
+
 .pattern-generation-container {
     display: flex;
 }
@@ -113,6 +117,7 @@ svg {
 .pattern-generation-one {
     flex: 1;
     margin-right: 10px;
+    max-width: 50%;
 }
 
 .pattern-generation-one__body {
@@ -122,6 +127,7 @@ svg {
 .pattern-generation-two {
     flex: 1;
     margin-left: 10px;
+    max-width: 50%;
 }
 
 .pattern-generation-two__body {
